--- a/StatTest.dproj
+++ b/StatTest.dproj
@@ -759,6 +759,7 @@
                 <Platform value="Android">True</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">True</Platform>
+                <Platform value="OSX32">True</Platform>
             </Platforms>
         </BorlandProject>
         <ProjectFileVersion>12</ProjectFileVersion>
